Fixing image distortion and flexbox responsiveness issues

--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ p, ul, button {
 #resultBox {
   display: flex;
   padding: 10px;
-  width: 33%;
+  flex: 1 1 0px;
 }
 
 #metadata {
